--- a/EvaluationM4M5-main-results/Evaluation.Rmd
+++ b/EvaluationM4M5-main-results/Evaluation.Rmd
@@ -249,6 +249,9 @@ salloc --cpus-per-task=8 --mem=10G
 srun fastqc FASTQ/SRR10390685_1.fastq.gz -o QC/ -t 8
 srun fastqc FASTQ/SRR10390685_2.fastq.gz -o QC/ -t 8
 
+## Copie des rapport htlm vers supplemental data
+cp QC/*html ../supplemental_data/
+
 ```
 
 La qualité des bases vous paraît-elle satisfaisante ? Pourquoi ?
@@ -259,8 +262,8 @@ La qualité des bases vous paraît-elle satisfaisante ? Pourquoi ?
 
 car <code> </code> comme le montre <code> </code>
 
-Lien vers le [rapport MulitQC]()
-
+Lien vers le [rapport MulitQC SRR10390685_1](https://agodmer.github.io/Evaluation_M4_M5/supplemental_data/SRR10390685_1_fastqc.html)
+Lien vers le [rapport MulitQC SRR10390685_2](https://agodmer.github.io/Evaluation_M4_M5/supplemental_data/SRR10390685_2_fastqc.html)
 Est-ce que les reads déposés ont subi une étape de nettoyage avant d'être déposés ? Pourquoi ?
 
 - [ ] Oui
