--- a/EvaluationM4M5-main-results/Evaluation.Rmd
+++ b/EvaluationM4M5-main-results/Evaluation.Rmd
@@ -256,14 +256,14 @@ cp QC/*html ../supplemental_data/
 
 La qualité des bases vous paraît-elle satisfaisante ? Pourquoi ?
 
-- [ ] Oui
+- [X] Oui
 - [ ] Non
 
 
-car <code> </code> comme le montre <code> </code>
+car <code> la qualité (estimée par le score Phred) de chaque base pour tous les reads de votre jeu de données est en moyenne et en médiane supérieure à 30 (cette valeur correspond à la probabilité de 1 pour 1000 q'une base ait été identifiée incorectement) </code> comme le montre <code>le graphique *Per base sequence quality* qui représente représente la qualité (score Phred, en ordonnée) de chaque base (en abscisse) pour tous les reads de votre jeu de données ;  Le code couleur vous indique les scores de très bonne qualité en vert pour nos reads.</code>
 
-Lien vers le [rapport MulitQC SRR10390685_1](https://agodmer.github.io/Evaluation_M4_M5/supplemental_data/SRR10390685_1_fastqc.html)
-Lien vers le [rapport MulitQC SRR10390685_2](https://agodmer.github.io/Evaluation_M4_M5/supplemental_data/SRR10390685_2_fastqc.html)
+- Lien vers le [rapport MulitQC SRR10390685_1](https://agodmer.github.io/Evaluation_M4_M5/supplemental_data/SRR10390685_1_fastqc.html)
+- Lien vers le [rapport MulitQC SRR10390685_2](https://agodmer.github.io/Evaluation_M4_M5/supplemental_data/SRR10390685_2_fastqc.html)
 Est-ce que les reads déposés ont subi une étape de nettoyage avant d'être déposés ? Pourquoi ?
 
 - [ ] Oui
