--- a/EvaluationM4M5-main-results/Evaluation.Rmd
+++ b/EvaluationM4M5-main-results/Evaluation.Rmd
@@ -260,13 +260,13 @@ La qualité des bases vous paraît-elle satisfaisante ? Pourquoi ?
 - [ ] Non
 
 
-car <code> la qualité (estimée par le score Phred) de chaque base pour tous les reads de votre jeu de données est en moyenne et en médiane supérieure à 30 (cette valeur correspond à la probabilité de 1 pour 1000 q'une base ait été identifiée incorectement) </code> comme le montre <code>le graphique *Per base sequence quality* qui représente représente la qualité (score Phred, en ordonnée) de chaque base (en abscisse) pour tous les reads de votre jeu de données ;  Le code couleur vous indique les scores de très bonne qualité en vert pour nos reads.</code>
+car <code> la qualité (estimée par le score Phred) de chaque base pour tous les reads de votre jeu de données est en moyenne et en médiane supérieure à 30 (cette valeur correspond à la probabilité de 1 pour 1000 q'une base ait été identifiée incorectement) </code> comme le montre <code>le graphique **Per base sequence quality** qui représente représente la qualité (score Phred, en ordonnée) de chaque base (en abscisse) pour tous les reads de votre jeu de données ;  Le code couleur vous indique les scores de très bonne qualité en vert pour nos reads. On peut observer un warning sur **Per base sequence content** qui trace le pourcentage de chacun des quatre nucléotides à chaque position sur toutes les lectures dans le fichier de séquence d'entrée. Cependant La proportion de chacune des quatre bases reste relativement constante sur la longueur de la lecture avec AT et GC et les lignes du graphiques sont parallèles les unes aux autres. La sur-représentation des bases AT est concordante avec le poucentage de GC de l'espèce étudiée (*Bacillus subtilis*) qui n'est pas égal à 50% mais à 43% sur le génome de référence  Bacillus subtilis subsp. subtilis str. 168 [NCBI](https://www.ncbi.nlm.nih.gov/genome/?term=Bacillus%20subtilis%5BOrganism%5D&cmd=DetailsSearch). </code>
 
 - Lien vers le [rapport MulitQC SRR10390685_1](https://agodmer.github.io/Evaluation_M4_M5/supplemental_data/SRR10390685_1_fastqc.html)
 - Lien vers le [rapport MulitQC SRR10390685_2](https://agodmer.github.io/Evaluation_M4_M5/supplemental_data/SRR10390685_2_fastqc.html)
 Est-ce que les reads déposés ont subi une étape de nettoyage avant d'être déposés ? Pourquoi ?
 
-- [ ] Oui
+- [X] Oui
 - [ ] Non
 
 car <code></code>
