--- a/EvaluationM4M5-main-results/Evaluation.Rmd
+++ b/EvaluationM4M5-main-results/Evaluation.Rmd
@@ -455,21 +455,26 @@ bedtools --version >> ../supplemental_data/Version_tools.txt
 ## Extraction du gène d'intérêt à partir du fichier gff
 srun zgrep trmNF REFERENCE_GENOME/GCF_000009045.1_ASM904v1_genomic.gff.gz | awk '$3=="gene"' > REFERENCE_GENOME/trmNF_gene.gff3
 
-##########
 ## Ressources du cluster
-salloc --cpus-per-task=8 --mem=10
+salloc --cpus-per-task=8 --mem=10G
 
 ## Croisemment des données avec l'option -f (nombre de reads qui chevauchent avec au moins 50% de leur longueur le gène trmNF)
 srun bedtools intersect -a MAPPING/SRR10390685_on_GCF_000009045.1_ASM904v1_genomic_reference.1.sort.bam -b REFERENCE_GENOME/trmNF_gene.gff3 -sorted -f 0.5 > MAPPING/SRR10390685_on_trmNF_gene.bam
 
-## Tri et indexage des reads
+## Tri et indexage des reads chevauchants
 srun samtools sort MAPPING/SRR10390685_on_trmNF_gene.bam -o MAPPING/SRR10390685_on_trmNF_gene.sort.bam
 srun samtools index MAPPING/SRR10390685_on_trmNF_gene.sort.bam
 
+## Nombre de read chevauchant le gène d'intérêt
+srun samtools idxstats MAPPING/SRR10390685_on_trmNF_gene.sort.bam > ../supplemental_data/ SRR10390685_on_trmNF_gene_rapport.sort.bam.idxstats
+
+
+## Visualisation du fichier
+ cat ../supplemental_data/SRR10390685_on_trmNF_gene_rapport.sort.bam.idxstats
 
 ```
 
-<code> </code> reads chevauchent le gène d'intérêt.
+<code>2801</code> reads chevauchent le gène d'intérêt.
 
 
 ## Visualisation
