Correction MULTIQC pas à la bonne place

--- a/EvaluationM4M5-main-results/Evaluation.Rmd
+++ b/EvaluationM4M5-main-results/Evaluation.Rmd
@@ -252,19 +252,6 @@ srun fastqc FASTQ/SRR10390685_2.fastq.gz -o QC/ -t 8
 ## Copie des rapport htlm vers supplemental data
 scp QC/*html ../supplemental_data/
 
-## Création d'un rapport multiQC
-
-## Chargement du module multiQC
-module avail multiqc
-module load multiqc/1.9
-
-## Ecriture de la version de multiqc avec nano sur le fichier Version_tools.txt
-srun multiqc -d . -o .
-
-## Copie du rapport dans supplmental_data
-scp multiqc_report.html ../supplemental_data/
-
-
 ```
 
 La qualité des bases vous paraît-elle satisfaisante ? Pourquoi ?
@@ -290,7 +277,7 @@ La sur-représentation des bases AT est concordante avec le poucentage de GC de 
 
 - Lien vers le [rapport FASTQC SRR10390685_1](https://agodmer.github.io/Evaluation_M4_M5/supplemental_data/SRR10390685_1_fastqc.html)
 - Lien vers le [rapport FASTQC SRR10390685_2](https://agodmer.github.io/Evaluation_M4_M5/supplemental_data/SRR10390685_2_fastqc.html)
-- Lien vers le [rapport MULTIQC](https://agodmer.github.io/Evaluation_M4_M5/supplemental_data/multiqc_report.html)
+
 
 Est-ce que les reads déposés ont subi une étape de nettoyage avant d'être déposés ? Pourquoi ?
 
@@ -532,5 +519,22 @@ samtools faidx GCF_000009045.1_ASM904v1_genomic.fna
 
 <code>Capture d'écran du gène entier : </code> <br>
 ![Capture d'écran du gène entier](../supplemental_data/Capture_ecran_gene_module4_5.PNG)
+
+```{bash}
+## Création d'un rapport multiQC
+
+## Chargement du module multiQC
+module avail multiqc
+module load multiqc/1.9
+
+## Ecriture de la version de multiqc avec nano sur le fichier Version_tools.txt
+srun multiqc -d . -o .
+
+## Copie du rapport dans supplmental_data
+scp multiqc_report.html ../supplemental_data/
+```
+
+**Résumé des opérations réalisées :**
+ Lien vers le [rapport MULTIQC](https://agodmer.github.io/Evaluation_M4_M5/supplemental_data/multiqc_report.html)
 
 # References
